infra/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lahuella-app-deployment
  namespace: default
  labels:
    app: lahuella-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lahuella-app
  template:
    metadata:
      labels:
        app: lahuella-app
    spec:
      containers:
        - name: lahuella-app
          image: lahuella-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
