infra/k8s/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lahuella-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: midominio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lahuella-app-service
                port:
                  number: 80
